--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,7 @@ body {
 header {
   @apply fixed top-0 left-0 right-0 z-50 py-5;
   @apply bg-stone-100/75 dark:bg-stone-900/25;
-  @apply backdrop-blur-sm saturate-200;
+  @apply backdrop-blur-lg saturate-200;
 }
 
 main {
@@ -56,8 +56,9 @@ article {
 }
 
 .animate {
-  @apply opacity-0 translate-y-3;
-  @apply transition-all duration-700 ease-out;
+  @apply opacity-100 translate-y-0;
+  @apply transition-all duration-100;
+  transition-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1);
 }
 
 .animate.show {
