--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,13 +56,13 @@ article {
 }
 
 .animate {
-  @apply opacity-100 translate-y-0;
-  @apply transition-all duration-100;
+  @apply opacity-0 translate-y-2 scale-95;
+  @apply transition-all duration-300;
   transition-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1);
 }
 
 .animate.show {
-  @apply opacity-100 translate-y-0;
+  @apply opacity-100 translate-y-0 rotate-0 scale-100;
 }
 
 html #back-to-top {
